--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,9 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 <!-- badges: start -->
-[![CRAN status](https://www.r-pkg.org/badges/version/RTL)](https://cran.r-project.org/package=RTL)
-[![Downloads](https://cranlogs.r-pkg.org/badges/RTL)](https://cran.rstudio.com/web/packages/RTL/index.html)
-[![R-CMD-check](https://github.com/risktoollib/RTL/actions/workflows/r.yml/badge.svg)](https://github.com/risktoollib/RTL/actions/workflows/r.yml)
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/RTL)](https://cran.r-project.org/package=RTL)
+[![metacran downloads](https://cranlogs.r-pkg.org/badges/RTL)](https://cran.r-project.org/package=RTL)
+[![R-CMD-check](https://github.com/risktoollib/RTL/workflows/R-CMD-check/badge.svg)](https://github.com/risktoollib/RTL/actions)
 <!-- badges: end --> 
 
 ## Overview
@@ -26,7 +26,7 @@ Send feedback to `pcote@ualberta.ca`. We welcome feedback, suggestions and colla
 + `eiaStocks`: Sample data set of EIA.gov stocks for key commodities.
 + `cancrudeassays` contains historical Canadian crude assays by batch from [Crudemonitor](https://crudemonitor.ca/home.php). `cancrudeassayssum` is a summarised average assays version.
 + `crudeassaysXOM` for all publicly available complete assays in Excel format from [ExxonMobil](https://corporate.exxonmobil.com/Crude-oils/Crude-trading/Crude-oil-blends-by-API-gravity-and-by-sulfur-content#APIgravity)
-+ `crudeassaysBP` for all publicly available complete assays in Excel format from [BP](https://www.bp.com/en/global/bp-global-energy-trading/features-and-updates/technical-downloads/crudes-assays.html)
++ `crudeassaysBP` for all publicly available complete assays in Excel format from [BP](https://www.bp.com/en/global/bp-trading-and-shipping/documents-and-downloads/technical-downloads/crudes-assays.html)
 
 ### Swap Pricing and Contract Roll Adjustement
 
